<?xml version="1.0"?>
<package format="2">
  <name>libvisca2</name>
  <version>0.0.0</version>
  <description>Driver library for controlling VISCA-compliant cameras via RS232</description>

  <maintainer email="marius.schnaubelt@energy-robotics.com">Marius Schnaubelt</maintainer>

  <license>LGPLv2.1</license>


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
